--- a/index.html
+++ b/index.html
@@ -165,6 +165,178 @@
                 </div>
            </div>
        </section>
+       <section  class="app-list container-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col col-s-6 ">
+                        <div class="app-list__left">
+                             <div class="app-list__left-item">
+                                <div class="app-list__left-item-image">
+                                    <img src="https://img.meta.com.vn/Data/image/2022/01/13/anh-dep-thien-nhien-3.jpg" alt="" />
+                                </div>
+                                <div class="app-list__left-item-content">
+                                    <h1> Tiêu đề post</h1>
+                                    <b> Ngày tháng tác giả</b>
+                                    <p>Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post</p>
+                                </div>
+                             </div>
+                             <div class="app-list__left-item">
+                                <div class="app-list__left-item-image">
+                                    <img src="https://img.meta.com.vn/Data/image/2022/01/13/anh-dep-thien-nhien-3.jpg" alt="" />
+                                </div>
+                                <div class="app-list__left-item-content">
+                                    <h1> Tiêu đề post</h1>
+                                    <b> Ngày tháng tác giả</b>
+                                    <p>Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post</p>
+                                </div>
+                             </div>
+                             <div class="app-list__left-item">
+                                <div class="app-list__left-item-image">
+                                    <img src="https://img.meta.com.vn/Data/image/2022/01/13/anh-dep-thien-nhien-3.jpg" alt="" />
+                                </div>
+                                <div class="app-list__left-item-content">
+                                    <h1> Tiêu đề post</h1>
+                                    <b> Ngày tháng tác giả</b>
+                                    <p>Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post</p>
+                                </div>
+                             </div>
+                             <div class="app-list__left-item">
+                                <div class="app-list__left-item-image">
+                                    <img src="https://img.meta.com.vn/Data/image/2022/01/13/anh-dep-thien-nhien-3.jpg" alt="" />
+                                </div>
+                                <div class="app-list__left-item-content">
+                                    <h1> Tiêu đề post</h1>
+                                    <b> Ngày tháng tác giả</b>
+                                    <p>Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post</p>
+                                </div>
+                             </div>
+                             <div class="app-list__left-item">
+                                <div class="app-list__left-item-image">
+                                    <img src="https://img.meta.com.vn/Data/image/2022/01/13/anh-dep-thien-nhien-3.jpg" alt="" />
+                                </div>
+                                <div class="app-list__left-item-content">
+                                    <h1> Tiêu đề post</h1>
+                                    <b> Ngày tháng tác giả</b>
+                                    <p>Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post</p>
+                                </div>
+                             </div>
+                             <div class="app-list__left-item">
+                                <div class="app-list__left-item-image">
+                                    <img src="https://img.meta.com.vn/Data/image/2022/01/13/anh-dep-thien-nhien-3.jpg" alt="" />
+                                </div>
+                                <div class="app-list__left-item-content">
+                                    <h1> Tiêu đề post</h1>
+                                    <b> Ngày tháng tác giả</b>
+                                    <p>Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post</p>
+                                </div>
+                             </div>
+
+                        </div>
+                    </div>
+                    <div class="col col-s-6 ">
+                        <div class="app-list__right">
+                            <div class="app-list__right-item">
+                                <div class="row">
+                                    <div class="col col-6 col-s-12">
+                                        <div class="app-list__right_image">
+                                            <img src="https://img.meta.com.vn/Data/image/2022/01/13/anh-dep-thien-nhien-3.jpg" alt="" />
+                                        </div>
+                                    </div>
+                                    <div class="col col-6 col-s-12">
+                                        <div class="app-list__right_content">
+                                            <h1> Tiêu đề post</h1>
+                                            <b> Ngày tháng tác giả</b>
+                                            <p>Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="app-list__right-item">
+                                <div class="row">
+                                    <div class="col col-6 col-s-12">
+                                        <div class="app-list__right_image">
+                                            <img src="https://img.meta.com.vn/Data/image/2022/01/13/anh-dep-thien-nhien-3.jpg" alt="" />
+                                        </div>
+                                    </div>
+                                    <div class="col col-6 col-s-12">
+                                        <div class="app-list__right_content">
+                                            <h1> Tiêu đề post</h1>
+                                            <b> Ngày tháng tác giả</b>
+                                            <p>Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="app-list__right-item">
+                                <div class="row">
+                                    <div class="col col-6 col-s-12">
+                                        <div class="app-list__right_image">
+                                            <img src="https://img.meta.com.vn/Data/image/2022/01/13/anh-dep-thien-nhien-3.jpg" alt="" />
+                                        </div>
+                                    </div>
+                                    <div class="col col-6 col-s-12">
+                                        <div class="app-list__right_content">
+                                            <h1> Tiêu đề post</h1>
+                                            <b> Ngày tháng tác giả</b>
+                                            <p>Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="app-list__right-item">
+                                <div class="row">
+                                    <div class="col col-6 col-s-12">
+                                        <div class="app-list__right_image">
+                                            <img src="https://img.meta.com.vn/Data/image/2022/01/13/anh-dep-thien-nhien-3.jpg" alt="" />
+                                        </div>
+                                    </div>
+                                    <div class="col col-6 col-s-12">
+                                        <div class="app-list__right_content">
+                                            <h1> Tiêu đề post</h1>
+                                            <b> Ngày tháng tác giả</b>
+                                            <p>Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="app-list__right-item">
+                                <div class="row">
+                                    <div class="col col-6 col-s-12">
+                                        <div class="app-list__right_image">
+                                            <img src="https://img.meta.com.vn/Data/image/2022/01/13/anh-dep-thien-nhien-3.jpg" alt="" />
+                                        </div>
+                                    </div>
+                                    <div class="col col-6 col-s-12">
+                                        <div class="app-list__right_content">
+                                            <h1> Tiêu đề post</h1>
+                                            <b> Ngày tháng tác giả</b>
+                                            <p>Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="app-list__right-item">
+                                <div class="row">
+                                    <div class="col col-6 col-s-12">
+                                        <div class="app-list__right_image">
+                                            <img src="https://img.meta.com.vn/Data/image/2022/01/13/anh-dep-thien-nhien-3.jpg" alt="" />
+                                        </div>
+                                    </div>
+                                    <div class="col col-6 col-s-12">
+                                        <div class="app-list__right_content">
+                                            <h1> Tiêu đề post</h1>
+                                            <b> Ngày tháng tác giả</b>
+                                            <p>Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post -- Chỗ này để viết nội dung cho bài post</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+       </section>
 
 
     </main>
